Potencial y corriente.html

--- a/fisica/Potencial y corriente.html
+++ b/fisica/Potencial y corriente.html
@@ -74,7 +74,7 @@
     <li>Medición de energía con amperímetros y voltímetros.</li>
   </ul>
   <div class="image-container">
-    <img src="imagenes/aplic.jpg" alt="Aplicaciones tecnológicas">
+    <img src="https://www.lasalleteruel.es/museo_virtual/imagen/amperimetro1p.jpg" alt="Aplicaciones tecnológicas">
   </div>
 </section>
 
